--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "parcel build"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.12.0",
     "parcel": "^2.12.0",
     "sass": "^1.77.6"
   }
